Fix issue with new post form not aligning

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,11 +13,6 @@
   gap: 1rem;
 }
 
-.mainContainer > main > p {
-  font-size: 1.5rem;
-  margin-top: 4rem;
-}
-
 .mainContainer > main > h2 {
     font-size: 2rem;
     text-decoration: underline;
